19990523-16:45 CET Eddie Runia
  * tests/working/test_all.prg
    Optional command line option added. If you pass HRB, it will compile
    .HRB files. (Also it redirects the output to test_all.out, because
    it went to quickly)

19990523-16:15 CET Patrick Mast (upload by Eddie Runia)
  * tests/working/test_all.prg, tests/working/test_all.lnl
    Testbank added.
  * tests/working/*.prg
    So programs not qualified for testing.
  * tests/working/rtl_test.prg
    function Main() added

19990523-14:30 CET Eddie Runia
  * tools.b16, tools.b32, bldtls32, bldtools.bat
    send to heaven

19990523-14:05 CET Eddie Runia
  * source/rtl/files.c
    #include added for Borland
  * source/rtl/strings.c
    str error fixed

19990523-12:50 CET Eddie Runia
  * source/rtl/transfrm.c
    Modified for by reference. (Forgot I was Captain of that)

19990523-12:20 CET Eddie Runia
  * include/types.h
    modified the IS_* to work for reference passed variables
  * source/vm/hvm.c
    Changed ->wType to IS_* if possible else added & ~IT_BYREF
  * source/rtl/strings.c
    Strings also modified


19990523-11:36 CET Manuel Ruiz
  * source/rtl/files.c
    Add HAVE_POSIX_IO for Borland and GCC compilers

19990523-08:00 CET Les Griffith (upload by Eddie Runia)
  * source/rtl/files.c
    Yes, revision 1.2 !
  * tests/working/passref.prg, tests/working/iotest.prg
    test files added. (Not functioning correctly yet)

19990522-18:30 CET Eddie Runia
  * tests/working/runner.c
    command-line arguments passed to both init function and running program
  * tests/working/spawn.prg
    test program

19990522-17:50 CET Eddie Runia
  * source/rtl/arrays.c, source/rtl/classes.c
    typical : if it works on one compiler, it will fail on another.
    oClone also modified :-)

19990522-17:25 CET Eddie Runia
  * source/vm/hvm.c
    'Array' bug possibly resolved.
  * source/rtl/arrays.c
    aClone does not loose memory anymore
  * tests/working/ainstest.prg
    test for aClone added.
